[gd_scene load_steps=13 format=2]

[ext_resource path="res://game/MapSelect.gd" type="Script" id=1]
[ext_resource path="res://Import Files/GrindAndDeath_Demo.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fade_out/FadeOut.tscn" type="PackedScene" id=3]
[ext_resource path="res://Import Files/House.png" type="Texture" id=4]
[ext_resource path="res://Import Files/Garage.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="GDScript" id=2]

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 2 )

[node name="MapSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeOut" parent="." instance=ExtResource( 3 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1280.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.392157, 0, 0, 1 )
custom_constants/shadow_offset_y = 5
text = "Map Select"
align = 1
valign = 1

[node name="BackButtonContainer" type="VBoxContainer" parent="."]
margin_left = 469.0
margin_top = 660.0
margin_right = 810.0
margin_bottom = 700.0
rect_min_size = Vector2( 341, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="BackButtonContainer"]
margin_right = 341.0
margin_bottom = 40.0
rect_min_size = Vector2( 341, 40 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Back"

[node name="MapsContainer" type="HBoxContainer" parent="."]
margin_left = 40.0
margin_top = 100.0
margin_right = 1240.0
margin_bottom = 620.0
rect_min_size = Vector2( 1200, 520 )
script = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HouseMapContainer" type="CenterContainer" parent="MapsContainer"]
margin_right = 600.0
margin_bottom = 520.0
rect_min_size = Vector2( 600, 520 )

[node name="VBoxContainer" type="VBoxContainer" parent="MapsContainer/HouseMapContainer"]
margin_left = 10.0
margin_top = 46.0
margin_right = 590.0
margin_bottom = 473.0

[node name="Label" type="Label" parent="MapsContainer/HouseMapContainer/VBoxContainer"]
margin_right = 580.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.356863, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "House"
align = 1

[node name="TextureRect" type="TextureRect" parent="MapsContainer/HouseMapContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 580.0
margin_bottom = 378.0
texture = ExtResource( 4 )

[node name="HouseMapButton" type="Button" parent="MapsContainer/HouseMapContainer/VBoxContainer"]
margin_top = 382.0
margin_right = 580.0
margin_bottom = 427.0
rect_min_size = Vector2( 0, 45 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Select"

[node name="GarageMapContainer" type="CenterContainer" parent="MapsContainer"]
margin_left = 604.0
margin_right = 1200.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MapsContainer/GarageMapContainer"]
margin_left = 8.0
margin_top = 46.0
margin_right = 588.0
margin_bottom = 473.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MapsContainer/GarageMapContainer/VBoxContainer"]
margin_right = 580.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.356863, 0, 0, 1 )
custom_constants/shadow_offset_y = 5
text = "Garage"
align = 1

[node name="TextureRect" type="TextureRect" parent="MapsContainer/GarageMapContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 580.0
margin_bottom = 378.0
texture = ExtResource( 5 )

[node name="GarageMapButton" type="Button" parent="MapsContainer/GarageMapContainer/VBoxContainer"]
margin_top = 382.0
margin_right = 580.0
margin_bottom = 427.0
rect_min_size = Vector2( 0, 45 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Select"
[connection signal="pressed" from="BackButtonContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MapsContainer/HouseMapContainer/VBoxContainer/HouseMapButton" to="MapsContainer" method="_on_HouseMapButton_pressed"]
[connection signal="pressed" from="MapsContainer/HouseMapContainer/VBoxContainer/HouseMapButton" to="." method="_on_HouseMapButton_pressed"]
[connection signal="pressed" from="MapsContainer/GarageMapContainer/VBoxContainer/GarageMapButton" to="MapsContainer" method="_on_GarageMapButton_pressed"]
[connection signal="pressed" from="MapsContainer/GarageMapContainer/VBoxContainer/GarageMapButton" to="." method="_on_GarageMapButton_pressed"]
